- sphinx documentation / readthedocs
- use os.path.join instead of manual filepath construction

v1.1.0
- add ability to configure Header section

v1.0.3
- post: add function to read output of SaveData/SaveScalars solver to pandas dataframe

v1.0.2
- add referencing to other bodies / boundaries (issue #17) using the StringFromList class

v1.0.1
- fix requirements in setup.py, environment.yml

v1.0.0
- remove gmsh module, it has been moved to a separate project: objectgmsh

v0.3.3
- add intro_text property for parameter definitions to Simulation class

v0.3.2
- Bugfix elmerkw

v0.3.1
- Bugfix in elmerkw

v0.3.0
- Removed solver specific keywords. For backward compatibility the new module elmerkw was added (usage: import pyelmer.elmerkw as elmer).
- Moved data to examples, it's not shipped with the package any longer.
- Updated examples

v0.2.1
- bugfix in Shape.bounding_box

v 0.2.0
- Merged pull request from Anil Kunwar:
    - execute.py: run_elmerf90
    - simulations.yml: "2D transient"
    - solvers.yml: "ThermoElectricSolver"
- Improved behavior of 'import pyelmer'
- Summarized gmsh_objects and gmsh_utils to single gmsh module
- Write equation, force, initial condition, material, solver name in body / equation in sif
- renamed surf_id to geo_id in Body class
- Introduced proper versioning numbering using versioneer
- Codestyle: black
- Bugfixes in gmsh Shape, Model
- Cleanup and minor bugfixes

v 0.1.2
- Added further functionality to gmsh_objects
- BC: added radiation to ambient and heat flux, improved mesh updated

v 0.1.1
- Updated readme.md