@@ -1,3 +1,4 @@
+- add keyword arguments for additional flexibility to run_elmer_grid
 - sphinx documentation / readthedocs
 - use os.path.join instead of manual filepath construction
 
